# MawiGateway

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/core/: Cargo.toml
backend/core/src/: agentic.rs  config.rs  cost.rs  db.rs  keys.rs  lib.rs  license.rs  models.rs  plans.rs  pricing.rs  quota.rs  routing.rs  rtcros.rs  security.rs  services.rs  tools.rs  types.rs  unified.rs  utils.rs
backend/core/src/auth/: middleware.rs  mod.rs  service.rs  utils.rs
backend/core/src/providers/: anthropic.rs  azure.rs  deepseek.rs  elevenlabs.rs  gemini.rs  mistral.rs  mod.rs  openai.rs  perplexity.rs  selfhosted.rs  xai.rs
backend/gateway/: Cargo.toml
backend/gateway/examples/: simple_client.rs
backend/gateway/src/: agentic_executor.rs  agentic_memory.rs  analytics.rs  api.rs  audio.rs  auth_api.rs  auth_middleware.rs  auth_utils.rs  chat.rs  chat_new.rs  circuit_breaker.rs  context_manager.rs  executor.rs  health.rs  images.rs  lib.rs  main.rs  mcp_api.rs  mcp_client.rs  metrics.rs  organizations.rs  pricing.rs  speech_to_speech.rs  topology.rs  transcription.rs  user_api.rs  video.rs  video_job_status.rs
backend/gateway/tests/: plan_parsing.rs
backend/migrations/: 001_initial_schema.sql  006_model_health.sql  007_add_provider_endpoint.sql  008_add_api_version.sql  009_add_auth_tables.sql  010_add_service_models_rtcros.sql  011_create_request_logs.sql  012_add_user_id_columns.sql  013_assign_existing_data_to_admin.sql  014_add_agentic_support.sql  015_add_latency_microseconds.sql  016_add_model_metadata.sql  017_populate_model_pricing.sql  018_populate_service_capabilities.sql  019_set_default_pricing.sql  020_add_service_mcp_servers.sql  021_add_model_azure_fields.sql  022_optimize_indexes.sql  023_sync_positions_with_weights.sql  024_add_created_at_to_providers.sql  025_fix_mcp_timestamps.sql  026_fix_model_cost_types.sql  027_add_created_by_to_models.sql  028_set_community_tier.sql  029_refactor_tiers.sql  030_add_context_window.sql
docs/: metrics.md  self-hosting.md
examples/: README.md  test_agentic.sh  test_all.sh  test_backend.sh  test_chat.sh  test_phase1.sh
frontend/: .dockerignore  .env.example  Dockerfile  README.md  middleware.ts  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: AppLayout.tsx  AudioInput.tsx  ExecutionFlowCanvas.tsx  GatewayNode.tsx  ModalitySelector.tsx  ModelForm.tsx  ModelNode.tsx  ProviderForm.tsx  RichPromptEditor.tsx  ServiceCreationWizard.tsx  ServiceForm.tsx  ServiceNode.tsx  ServiceTypeCard.tsx  Sidebar.tsx  TopBar.tsx  (+1 more)
(+177 files in other folders)
