[workspace]
resolver = "2"
members = [
    "core",
    "gateway",
    "enterprise"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
poem = "3.1.12"
poem-grpc = "0.5.7"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
poem-openapi = { version = "5.1.12", features = ["swagger-ui"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio-stream = "0.1"
async-channel = "2.0"
bytes = "1.0"
async-trait = "0.1"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
rand = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1

