[package]
name = "mawi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { workspace = true }
poem = { workspace = true }
tokio-stream = { workspace = true }
async-stream = "0.3.6"
async-sse = "5.1.0"
futures = "0.3.31"
bcrypt = "0.17.1"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
hex = "0.4.3"
sha2 = "0.10.9"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand.workspace = true

[features]
openapi = ["dep:poem-openapi"]

[dependencies.poem-openapi]
workspace = true
optional = true
