[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[lib]
name = "gateway"
path = "src/lib.rs"

[dependencies]
mawi-core = { path = "../core", features = ["openapi"] }

# External dependencies
poem = { workspace = true }
poem-openapi = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
time = "0.3"
lazy_static = "1.5.0"
futures = "0.3"
async-stream = "0.3"
serde_yaml = "0.9"
rand = "0.8"
regex = "1"
bcrypt = "0.17.1"
dotenv = "0.15.0"
sha2 = "0.10"
hex = "0.4"
dashmap = "5.5"
moka = { version = "0.12", features = ["future"] }
prometheus = "0.13"
scopeguard = "1.2"

# mawi-enterprise = { path = "../enterprise", optional = true }

[features]
default = []
# enterprise = ["dep:mawi-enterprise"]

